서버 통신 구현 중

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         <activity android:name=".RegisterActivity"/>
         <activity android:name=".ShopActivity"/>
         <activity android:name=".RoomActivity"/>
-        <activity android:name=".GameActivity"/>
+        <activity android:name=".GameActivity" android:windowSoftInputMode="adjustPan"/>
 
     </application>
 
