--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+        android:name=".Cram"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -25,6 +26,12 @@
         <activity android:name=".ShopActivity"/>
         <activity android:name=".RoomActivity"/>
         <activity android:name=".GameActivity" android:windowSoftInputMode="adjustPan"/>
+
+        <service android:name=".ClientService"
+            android:enabled="true"
+            android:exported="true">
+
+        </service>
 
     </application>
 
